--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>202310827</title>
+    <title>My Portfolio</title>
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- owl carousel css -->
@@ -76,7 +76,7 @@
               <div class="col-lg-12">
                 <div class="header-social-icon">
                   <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-behance"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin"></i></a></li>         
