--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@
         <div class="col-lg-6">
           <div class="about-content">
             <h5 class="about-title">저는 <span>이재엽</span> 입니다.</h5>
-            <p class="details">안녕하세요. 디자이너 이재엽입니다. 
-              저는 고등학교 방송부 부장을 고등학교 1학년부터 3학년까지 담당하였습니다. 이를 배경으로 학교의 다양한 행사를 담당하여 커뮤니케이션, 방송 장비 설정 및 관리, 편집 등의 능력들을 향상해왔습니다. 제가 직접 학교 행사를 담당한 것 중 가장 인상적인 행사는 창원 중학생 대상 롤드컵을 담당하였습니다. 이 대회를 열기 위해 홍보 포스터 및 현수막 제작, 온 오프라인 대회 진행, 결승전 생방송을 담당하였습니다. 결승전 생방송 진행을 위해 프로그램들을 갖추고 오프닝 영상과 대회 진행 및 해설을 도맡아 대회를 성공적으로 마무리하였습니다. 저는 팀 프로젝트를 진행할 경우 팀과의 소통을 토대로 프로젝트의 방향을 정하고 차분하게 프로젝트를 이행하여 완료하는 역량을 가지고 있습니다.
-              항상 노력하고 더욱 발전하여 게임 총괄 디렉터가 되도록 노력하겠습니다.
+            <p class="details"> 
+              저는 끈질기게 노력하는 사람입니다. 
+              <br>
+              저는 항상 긍정적으로 살아가는 사람입니다.
+              <br>
+              저는 팀 리더 입니다.
             </p>
               <ul>
                 <li>
@@ -229,7 +232,9 @@
               <i class="fas fa-laptop"></i>
             </div>
             <h3>web design</h3>
-            <p>주로 css기반으로 디자인하고 여러가지 오픈소스들을 활용하여 웹제작을 합니다.
+            <p>웹페이지에 대해서 공부하기 위해서 이 웹페이지를 제작하게 되었습니다.
+              <br>
+              주로 HTML 과 CSS를 주로 하는 프론트 엔드가 저의 강력한 기량입니다.
             </p>
           </div>
         </div>
@@ -240,7 +245,7 @@
             </div>
             <h3>video editing</h3>
             <p>
-              프리미어 프로, 에프터 이펙트를 활용하여 영상을 제작합니다.
+              영상편집으로 프리미어 프로와 에프터 이펙트를 활용하여 제작합니다.
             </p>
           </div>
         </div>
@@ -251,7 +256,7 @@
             </div>
             <h3>development</h3>
             <p>
-              대학교에 들어와 코딩을 배우고 있습니다. 웹프로그램에서 주로 css를 다룹니다.
+              게임 개발에 필요한 코딩과 자기개발에 필요한 공부를 하고 있습니다.
             </p>
           </div>
         </div>
@@ -262,7 +267,7 @@
             </div>
             <h3>graphic design</h3>
             <p>
-              포토샵, 일러스트레이터를 활용하여 시각디자인 혹은 사물디자인을 할 수 있습니다.
+              포토샵, 일러스트레이터를 활용하여 시각디자인 및 XD를 활용하여 기초 웹페이지 및 포스터 틀을 만들 수 있습니다.
             </p>
           </div>
         </div>
@@ -273,7 +278,7 @@
             </div>
             <h3>presentation</h3>
             <p>
-              저의 생각이나 의견을 다른사람들에게 임팩트있고 쉽게 이해할 수 있게 할 수 있습니다.
+              프로젝트 설명 및 발표에서 말하기를 늘리기 위해서 많은 노력들을 하였고 그 중 발음에 유의하며 문장을 구사하는 연습들이 주가 되었습니다.
             </p>
           </div>
         </div>
@@ -284,7 +289,7 @@
             </div>
             <h3>Efficiency</h3>
             <p>
-              효율을 중요하게 생각하여 늘 계획적이고 유동적으로 프로젝트를 이행할 수 있습니다.
+              효율을 중요하게 생각하여 노션 등을 활용하여 프로젝트의 상태와 진행 방향 등을 정확하게 정리하는 모습을 취하고 있습니다.
             </p>
           </div>
         </div>
@@ -320,13 +325,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 wordpress">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-1.png" alt="">
+              <img src="portfolio/portfolio-1.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-1.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-1.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
@@ -336,13 +341,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 photoshop">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-2.png" alt="">
+              <img src="portfolio/portfolio-2.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-2.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-2.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
@@ -352,13 +357,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 wordpress">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-3.png" alt="">
+              <img src="portfolio/portfolio-3.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-3.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-3.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
@@ -368,13 +373,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 web-design">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-4.png" alt="">
+              <img src="portfolio/portfolio-4.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-4.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-4.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
@@ -384,13 +389,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 photoshop">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-5.png" alt="">
+              <img src="portfolio/portfolio-5.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-5.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-5.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
@@ -400,13 +405,13 @@
         <div class="col-lg-4 col-md-6 col-sm-6 photoshop">
           <div class="single-work text-center mt-30">
             <div class="work-image">
-              <img src="images/portfolio/portfolio-6.png" alt="">
+              <img src="portfolio/portfolio-6.png" alt="">
             </div>
             <div class="work-overlay">
               <div class="work-content">
                 <h3 class="work-title">Product Design</h3>
                 <ul>
-                  <li><a href="images/portfolio/portfolio-6.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
+                  <li><a href="portfolio/portfolio-6.png" class="image-popup"><i class="fa fa-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-link"></i></a></li>
                 </ul>
               </div>
