--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       <i class="fa fa-calendar"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Date of birth:</span> 2004.05.26</p>
+                      <p><span>Date of birth:</span> ****.**.**</p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -131,7 +131,7 @@
                       <i class="fa fa-envelope"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Email:</span> gamercross6674@gmail.com</p>
+                      <p><span>Email:</span> ****@gmail.com</p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -141,7 +141,7 @@
                       <i class="fa fa-phone"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Phone:</span> 010-4951-6388</p>
+                      <p><span>Phone:</span> ***</p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -151,7 +151,7 @@
                       <i class="fa fa-map-marker"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Location:</span> changwon</p>
+                      <p><span>Location:</span> Republic of Korea</p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -161,7 +161,7 @@
                       <i class="fa fa-university"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Degree:</span> designer </p>
+                      <p><span>Degree:</span> Game Directer </p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -171,7 +171,7 @@
                       <i class="fa fa-user"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>profile:</span> student</p>
+                      <p><span>profile:</span> Designer </p>
                     </div>
                   </div> <!-- single info -->
                 </li>
@@ -504,7 +504,7 @@
             <div class="col-lg-8">
               <div class="section-title">
                 <h2>Ask</h2>
-                <h2>내가 들어왔던 <span>"질의응답"</span>모음</h2>
+                <h2>ABOUT <span>"ME"</span> </h2>
               </div>
             </div>
           </div>
@@ -513,34 +513,35 @@
               <div id="accordion">
                 <div class="accordion-item">
                   <div class="accordion-header" data-toggle="collapse" data-target="#collapse-01">
-                    <h3>언제부터 편집을 시작하였는가?</h3>
+                    <h3>언제부터 디자인을 시작하였는가?</h3>
                   </div>
                   <div class="collapse show" id="collapse-01" data-parent="#accordion">
                     <div class="accordion-body">
-                      <p>고등학교 1학년 방송부를 시작하고 나서 배우기 시작했다. 독학이었지만 나중에 편집을 할 수 있는 학교 후배에게 배우고
-                        MBC 인턴십을 하며 여러가지 편집을 배워웠다. 이제 경력으로 보았을 경우로는 3년차이다.</p>
+                      <p>시작은 고등학교 방송부를 하면서 여러 꿈을 키웠다. 처음에는 많이 어려웠지만 지금은 아이디어들을 시각화시킬수 있는 힘이 생겨서 자랑스럽게 생각한다.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <div class="accordion-header collapsed" data-toggle="collapse" data-target="#collapse-02">
-                    <h3>주로 쓰는 프로그램은 무엇인가?</h3>
+                    <h3>지금까지의 꿈이 무엇이었는가?</h3>
                   </div>
                   <div class="collapse" id="collapse-02" data-parent="#accordion">
                     <div class="accordion-body">
-                      <p>주로 after effect를 사용하여 영상편집을 한다. 어도비를 사용하며 photoshop, xd, 프리미어 프로 등 여러 디자인 툴을 사용할 수 있다.</p>
+                      <p>게임 총괄 디렉터가 되는것이 나의 꿈이자 목표이다. 게임 총괄 디렉터가 되기 위해서는 게임에 대한 지식과 여러가지 능력들이 종합적으로 필요하다고 느꼈다.
+                        그래서 나는 디자인을 배우고 게임을 배워보자는 생각으로 이 길을 걸어왔다. 게임을 이해하고 연구하고 디자인적인 요소들을 파악하기 위해서 많은 노력들을 하였다.
+                        지금 대학교에 와서 코딩을 배우고 나는 게임 개발자가 되어 끝은 게임 총괄 디렉터가 될것이다.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <div class="accordion-header collapsed" data-toggle="collapse" data-target="#collapse-03">
-                    <h3>하고 싶은것이 무엇인가?</h3>
+                    <h3>많이 힘들지 않는가?</h3>
                   </div>
                   <div class="collapse" id="collapse-03" data-parent="#accordion">
                     <div class="accordion-body">
-                      <p>게임 총괄 디렉터가 되고 싶다. 게임 총괄 디렉터가 되기 위해서는 게임에 대한 지식과 여러가지 능력들이 종합적으로 필요하다고 느꼈다.
-                        그래서 나는 디자인을 배우고 게임을 배워보자는 생각으로 이 길을 걸어왔다. 게임을 이해하고 연구하고 디자인적인 요소들을 파악하기 위해서 많은 노력들을 하였다.
-                        지금 대학교에 와서 코딩을 배우고 나는 게임 개발자가 되어 끝은 게임 총괄 디렉터가 될것이다.
+                      <p>
+                        힘든일도 많고 웃는일도 많았다. 항상 응원해주는 사람들에게서 힘을 얻고 꾸준히 내가 원하는 목표에 다가는것이 내가 그들에게 보답하는 길이라고 생각한다.
+                        항상 감사하고 고맙습니다.
                       </p>
                     </div>
                   </div>
