--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <!-- font awsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="wep.ico">
+    <!-- 웹페이지 썸네일 작업 -->
+    <meta property="og:url" content="http://gamercross.github.io">
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="portfolio-title.png">
+    <meta property="og:description" content="저를 소개합니다.">
 </head>
 <body>
   <div id="progressbar"></div>
